istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-example
spec:
  hosts:
  - "k8s-example.lusyoe.com"
  gateways:
  - k8s-example-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: k8s-example
